--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@ h1{
 .name-color{
     color: orange;
 }
+section{
+    display: flex;
+}
+.half-width{
+    width: 50%;
+}
+.half-width img{
+    width: 100%;
+}
